fix overflowing content

--- a/src/frontend/teachers-side/src/app/authentication/components/login/login.component.scss
+++ b/src/frontend/teachers-side/src/app/authentication/components/login/login.component.scss
@@ -1,5 +1,4 @@
 form { margin-right:50%;
-  margin-top:-35%;
   padding-left:10%;}
 button {
   background-color: #0D0A0B;
