--- a/src/frontend/teachers-side/src/app/authentication/components/register/register.component.scss
+++ b/src/frontend/teachers-side/src/app/authentication/components/register/register.component.scss
@@ -1,5 +1,4 @@
 form { margin-right:50%;
-  margin-top:-35%;
   padding-left:20%;}
 button {
   background-color: #0D0A0B;
